# memdbg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  memdbg.c  memdbg.h  memdbg_private.h
include/: memdbg.h
integration_tests/: error_checking_nothreads.c  error_checking_threaded.c
src/: memdbg.c  memdbg_private.h
unit_tests/: mode_stuff.c  overrides.c
